# -Engineering-Intelligence

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.adoc  Dockerfile  Gemfile  Makefile  README.adoc  README.md  book.adoc  package-lock.json  package.json
.github/: dependabot.yml
appendices/: a-engineering-change-reference-model.adoc  b-metric-specification-standard.adoc  c-experiment-and-causal-study-protocol.adoc  d-governance-privacy-and-acceptable-use-standard.adoc  e-economic-evaluation-and-business-case-standard.adoc  f-technical-reference-architecture.adoc  g-operating-templates-and-records.adoc  h-glossary-and-controlled-vocabulary.adoc  i-evidence-base-and-bibliography.adoc  j-maturity-assessment-and-adoption-roadmap.adoc  k-chapter-source-notes-and-citation-map.adoc
bibliography/: references.bib
chapters/: 01-introduction-source-notes.adoc  01-introduction.adoc  02-engineering-economics-source-notes.adoc  02-engineering-economics.adoc  03-engineering-change-source-notes.adoc  03-engineering-change.adoc  04-human-attention-source-notes.adoc  04-human-attention.adoc  05-measuring-engineering-systems-source-notes.adoc  05-measuring-engineering-systems.adoc  06-experimentation-and-causal-inference-source-notes.adoc  07-ai-assisted-engineering.adoc  (+24 more)
companion/synth/: README.md  SCHEMA.md  pyproject.toml
companion/synth/engintel_synth/: __init__.py  __main__.py  generator.py
companion/utils/: pyproject.toml
companion/utils/engintel_utils/: __init__.py  blast.py  governance.py  graph.py  metrics.py  monte_carlo.py  reconstruction.py  stats.py
(+134 files in other folders)
