[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engintel-utils"
version = "0.1.0"
description = "Shared analytics utilities for the Engineering Intelligence companion notebooks"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0", "scipy>=1.13"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engintel_utils*"]
